{
  "version": 4,
  "terraform_version": "1.1.9",
  "serial": 488,
  "lineage": "fe60b40d-09ff-5ad6-fdc6-3e779ed08158",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "all_worker_mgmt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:787987774269:security-group/sg-0058c1be4546dd8e8",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0058c1be4546dd8e8",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/8",
                  "172.16.0.0/12",
                  "192.168.0.0/16"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "all_worker_management2022061502243098440000000e",
            "name_prefix": "all_worker_management",
            "owner_id": "787987774269",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-00772055cda09214f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "worker_group_mgmt_one",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:787987774269:security-group/sg-030a1255d6dbe9df0",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-030a1255d6dbe9df0",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/8"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "worker_group_mgmt_one2022061502242969020000000c",
            "name_prefix": "worker_group_mgmt_one",
            "owner_id": "787987774269",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-00772055cda09214f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "worker_group_mgmt_two",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:787987774269:security-group/sg-0fc451cf463501771",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0fc451cf463501771",
            "ingress": [
              {
                "cidr_blocks": [
                  "192.168.0.0/16"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "worker_group_mgmt_two2022061502242969530000000d",
            "name_prefix": "worker_group_mgmt_two",
            "owner_id": "787987774269",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-00772055cda09214f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:787987774269:security-group/sg-08c6b238fa455af24",
            "description": "EKS cluster security group",
            "egress": [
              {
                "cidr_blocks": [],
                "description": "Cluster API to node groups",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-084bc8f37120984b1"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node kubelets",
                "from_port": 10250,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-084bc8f37120984b1"
                ],
                "self": false,
                "to_port": 10250
              }
            ],
            "id": "sg-08c6b238fa455af24",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Node groups to cluster API",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-084bc8f37120984b1"
                ],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "education-eks-5h1LPNFN-cluster-2022061502243108830000000f",
            "name_prefix": "education-eks-5h1LPNFN-cluster-",
            "owner_id": "787987774269",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "education-eks-5h1LPNFN-cluster"
            },
            "tags_all": {
              "Name": "education-eks-5h1LPNFN-cluster"
            },
            "timeouts": null,
            "vpc_id": "vpc-00772055cda09214f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:787987774269:security-group/sg-084bc8f37120984b1",
            "description": "EKS node shared security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Egress NTP/TCP to internet",
                "from_port": 123,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 123
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Egress NTP/UDP to internet",
                "from_port": 123,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": false,
                "to_port": 123
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Egress all HTTPS to internet",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "Node groups to cluster API",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-08c6b238fa455af24"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "Node to node CoreDNS",
                "from_port": 53,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 53
              },
              {
                "cidr_blocks": [],
                "description": "Node to node CoreDNS",
                "from_port": 53,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": true,
                "to_port": 53
              }
            ],
            "id": "sg-084bc8f37120984b1",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Cluster API to node groups",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-08c6b238fa455af24"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node kubelets",
                "from_port": 10250,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-08c6b238fa455af24"
                ],
                "self": false,
                "to_port": 10250
              },
              {
                "cidr_blocks": [],
                "description": "Node to node CoreDNS",
                "from_port": 53,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 53
              },
              {
                "cidr_blocks": [],
                "description": "Node to node CoreDNS",
                "from_port": 53,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": true,
                "to_port": 53
              }
            ],
            "name": "education-eks-5h1LPNFN-node-20220615022431178600000010",
            "name_prefix": "education-eks-5h1LPNFN-node-",
            "owner_id": "787987774269",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "education-eks-5h1LPNFN-node",
              "kubernetes.io/cluster/education-eks-5h1LPNFN": "owned"
            },
            "tags_all": {
              "Name": "education-eks-5h1LPNFN-node",
              "kubernetes.io/cluster/education-eks-5h1LPNFN": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-00772055cda09214f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "egress_nodes_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "Cluster API to node groups",
            "from_port": 443,
            "id": "sgrule-3846125129",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-08c6b238fa455af24",
            "self": false,
            "source_security_group_id": "sg-084bc8f37120984b1",
            "to_port": 443,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "egress_nodes_kubelet",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "Cluster API to node kubelets",
            "from_port": 10250,
            "id": "sgrule-2925075507",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-08c6b238fa455af24",
            "self": false,
            "source_security_group_id": "sg-084bc8f37120984b1",
            "to_port": 10250,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_nodes_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "Node groups to cluster API",
            "from_port": 443,
            "id": "sgrule-3091769545",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-08c6b238fa455af24",
            "self": false,
            "source_security_group_id": "sg-084bc8f37120984b1",
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "egress_cluster_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "Node groups to cluster API",
            "from_port": 443,
            "id": "sgrule-700322003",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-084bc8f37120984b1",
            "self": false,
            "source_security_group_id": "sg-08c6b238fa455af24",
            "to_port": 443,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "egress_https",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Egress all HTTPS to internet",
            "from_port": 443,
            "id": "sgrule-3024286724",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-084bc8f37120984b1",
            "self": false,
            "source_security_group_id": null,
            "to_port": 443,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "egress_ntp_tcp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Egress NTP/TCP to internet",
            "from_port": 123,
            "id": "sgrule-1805437210",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-084bc8f37120984b1",
            "self": false,
            "source_security_group_id": null,
            "to_port": 123,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "egress_ntp_udp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Egress NTP/UDP to internet",
            "from_port": 123,
            "id": "sgrule-352513047",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "udp",
            "security_group_id": "sg-084bc8f37120984b1",
            "self": false,
            "source_security_group_id": null,
            "to_port": 123,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "egress_self_coredns_tcp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "Node to node CoreDNS",
            "from_port": 53,
            "id": "sgrule-3100497544",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-084bc8f37120984b1",
            "self": true,
            "source_security_group_id": "sg-084bc8f37120984b1",
            "to_port": 53,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "egress_self_coredns_udp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "Node to node CoreDNS",
            "from_port": 53,
            "id": "sgrule-917132526",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "udp",
            "security_group_id": "sg-084bc8f37120984b1",
            "self": true,
            "source_security_group_id": "sg-084bc8f37120984b1",
            "to_port": 53,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "Cluster API to node groups",
            "from_port": 443,
            "id": "sgrule-2117811599",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-084bc8f37120984b1",
            "self": false,
            "source_security_group_id": "sg-08c6b238fa455af24",
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_kubelet",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "Cluster API to node kubelets",
            "from_port": 10250,
            "id": "sgrule-1260864320",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-084bc8f37120984b1",
            "self": false,
            "source_security_group_id": "sg-08c6b238fa455af24",
            "to_port": 10250,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_tcp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "Node to node CoreDNS",
            "from_port": 53,
            "id": "sgrule-1417062415",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-084bc8f37120984b1",
            "self": true,
            "source_security_group_id": "sg-084bc8f37120984b1",
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_udp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "Node to node CoreDNS",
            "from_port": 53,
            "id": "sgrule-4029221856",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "udp",
            "security_group_id": "sg-084bc8f37120984b1",
            "self": true,
            "source_security_group_id": "sg-084bc8f37120984b1",
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks.module.eks_managed_node_group[\"fppp\"]",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:787987774269:security-group/sg-029235f48d7dd89cd",
            "description": "EKS managed node group security group",
            "egress": [],
            "id": "sg-029235f48d7dd89cd",
            "ingress": [],
            "name": "fppp-eks-node-group-20220615033955952600000002",
            "name_prefix": "fppp-eks-node-group-",
            "owner_id": "787987774269",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "fppp-eks-node-group"
            },
            "tags_all": {
              "Name": "fppp-eks-node-group"
            },
            "timeouts": null,
            "vpc_id": "vpc-00772055cda09214f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks.module.eks_managed_node_group[\"green\"]",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:787987774269:security-group/sg-0067f3b61c8cc7b45",
            "description": "EKS managed node group security group",
            "egress": [],
            "id": "sg-0067f3b61c8cc7b45",
            "ingress": [],
            "name": "green-eks-node-group-20220615022432672400000012",
            "name_prefix": "green-eks-node-group-",
            "owner_id": "787987774269",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "green-eks-node-group"
            },
            "tags_all": {
              "Name": "green-eks-node-group"
            },
            "timeouts": null,
            "vpc_id": "vpc-00772055cda09214f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks.module.eks_managed_node_group[\"whi\"]",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:787987774269:security-group/sg-00343e8fe927886ce",
            "description": "EKS managed node group security group",
            "egress": [],
            "id": "sg-00343e8fe927886ce",
            "ingress": [],
            "name": "whi-eks-node-group-20220615060839397000000001",
            "name_prefix": "whi-eks-node-group-",
            "owner_id": "787987774269",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "whi-eks-node-group"
            },
            "tags_all": {
              "Name": "whi-eks-node-group"
            },
            "timeouts": null,
            "vpc_id": "vpc-00772055cda09214f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0aad2e38366ff4634",
            "association_id": "eipassoc-0d7b1c97deb1e1fe4",
            "domain": "vpc",
            "id": "eipalloc-0aad2e38366ff4634",
            "network_border_group": "ap-south-1",
            "network_interface": "eni-084bf00f7778f68bd",
            "private_dns": "ip-10-98-4-231.ap-south-1.compute.internal",
            "private_ip": "10.98.4.231",
            "public_dns": "ec2-43-205-0-237.ap-south-1.compute.amazonaws.com",
            "public_ip": "43.205.0.237",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "education-vpc-ap-south-1a",
              "kubernetes.io/cluster/education-eks-5h1LPNFN": "shared"
            },
            "tags_all": {
              "Name": "education-vpc-ap-south-1a",
              "kubernetes.io/cluster/education-eks-5h1LPNFN": "shared"
            },
            "vpc": true
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:787987774269:internet-gateway/igw-04123ec9c482cecab",
            "id": "igw-04123ec9c482cecab",
            "owner_id": "787987774269",
            "tags": {
              "Name": "education-vpc",
              "kubernetes.io/cluster/education-eks-5h1LPNFN": "shared"
            },
            "tags_all": {
              "Name": "education-vpc",
              "kubernetes.io/cluster/education-eks-5h1LPNFN": "shared"
            },
            "vpc_id": "vpc-00772055cda09214f"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0aad2e38366ff4634",
            "connectivity_type": "public",
            "id": "nat-026f07d5db106b5e3",
            "network_interface_id": "eni-084bf00f7778f68bd",
            "private_ip": "10.98.4.231",
            "public_ip": "43.205.0.237",
            "subnet_id": "subnet-019787d7f11e1c39c",
            "tags": {
              "Name": "education-vpc-ap-south-1a",
              "kubernetes.io/cluster/education-eks-5h1LPNFN": "shared"
            },
            "tags_all": {
              "Name": "education-vpc-ap-south-1a",
              "kubernetes.io/cluster/education-eks-5h1LPNFN": "shared"
            }
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0b93a6143b9519e2b1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-026f07d5db106b5e3",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0b93a6143b9519e2b",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-04123ec9c482cecab",
            "id": "r-rtb-05a202f167bc84e051080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-05a202f167bc84e05",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:787987774269:route-table/rtb-0b93a6143b9519e2b",
            "id": "rtb-0b93a6143b9519e2b",
            "owner_id": "787987774269",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-026f07d5db106b5e3",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "education-vpc-private",
              "kubernetes.io/cluster/education-eks-5h1LPNFN": "shared"
            },
            "tags_all": {
              "Name": "education-vpc-private",
              "kubernetes.io/cluster/education-eks-5h1LPNFN": "shared"
            },
            "timeouts": null,
            "vpc_id": "vpc-00772055cda09214f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:787987774269:route-table/rtb-05a202f167bc84e05",
            "id": "rtb-05a202f167bc84e05",
            "owner_id": "787987774269",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-04123ec9c482cecab",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "education-vpc-public",
              "kubernetes.io/cluster/education-eks-5h1LPNFN": "shared"
            },
            "tags_all": {
              "Name": "education-vpc-public",
              "kubernetes.io/cluster/education-eks-5h1LPNFN": "shared"
            },
            "timeouts": null,
            "vpc_id": "vpc-00772055cda09214f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-037b7d0891e52566a",
            "route_table_id": "rtb-0b93a6143b9519e2b",
            "subnet_id": "subnet-0d597af4c676fc8af"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0139d0e6d5946d46a",
            "route_table_id": "rtb-0b93a6143b9519e2b",
            "subnet_id": "subnet-0f86e8f02b420383c"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-043ba6bd12d61cb95",
            "route_table_id": "rtb-0b93a6143b9519e2b",
            "subnet_id": "subnet-0fd3498ca5fc9bef8"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-072fda547a7775f1e",
            "route_table_id": "rtb-05a202f167bc84e05",
            "subnet_id": "subnet-019787d7f11e1c39c"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00652002f8e80e7b0",
            "route_table_id": "rtb-05a202f167bc84e05",
            "subnet_id": "subnet-08f40a02c0b3cb542"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f857100e1ebef9e1",
            "route_table_id": "rtb-05a202f167bc84e05",
            "subnet_id": "subnet-083326de7fb14810a"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:787987774269:subnet/subnet-0d597af4c676fc8af",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.98.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d597af4c676fc8af",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "787987774269",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "education-vpc-private-ap-south-1a",
              "kubernetes.io/cluster/education-eks-5h1LPNFN": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "education-vpc-private-ap-south-1a",
              "kubernetes.io/cluster/education-eks-5h1LPNFN": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-00772055cda09214f"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:787987774269:subnet/subnet-0f86e8f02b420383c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.98.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f86e8f02b420383c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "787987774269",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "education-vpc-private-ap-south-1b",
              "kubernetes.io/cluster/education-eks-5h1LPNFN": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "education-vpc-private-ap-south-1b",
              "kubernetes.io/cluster/education-eks-5h1LPNFN": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-00772055cda09214f"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:787987774269:subnet/subnet-0fd3498ca5fc9bef8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1c",
            "availability_zone_id": "aps1-az2",
            "cidr_block": "10.98.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fd3498ca5fc9bef8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "787987774269",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "education-vpc-private-ap-south-1c",
              "kubernetes.io/cluster/education-eks-5h1LPNFN": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "education-vpc-private-ap-south-1c",
              "kubernetes.io/cluster/education-eks-5h1LPNFN": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-00772055cda09214f"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:787987774269:subnet/subnet-019787d7f11e1c39c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.98.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-019787d7f11e1c39c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "787987774269",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "education-vpc-public-ap-south-1a",
              "kubernetes.io/cluster/education-eks-5h1LPNFN": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "education-vpc-public-ap-south-1a",
              "kubernetes.io/cluster/education-eks-5h1LPNFN": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-00772055cda09214f"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:787987774269:subnet/subnet-08f40a02c0b3cb542",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.98.5.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08f40a02c0b3cb542",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "787987774269",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "education-vpc-public-ap-south-1b",
              "kubernetes.io/cluster/education-eks-5h1LPNFN": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "education-vpc-public-ap-south-1b",
              "kubernetes.io/cluster/education-eks-5h1LPNFN": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-00772055cda09214f"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:787987774269:subnet/subnet-083326de7fb14810a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1c",
            "availability_zone_id": "aps1-az2",
            "cidr_block": "10.98.6.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-083326de7fb14810a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "787987774269",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "education-vpc-public-ap-south-1c",
              "kubernetes.io/cluster/education-eks-5h1LPNFN": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "education-vpc-public-ap-south-1c",
              "kubernetes.io/cluster/education-eks-5h1LPNFN": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-00772055cda09214f"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:787987774269:vpc/vpc-00772055cda09214f",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.98.0.0/16",
            "default_network_acl_id": "acl-0a725eadc2dc4f458",
            "default_route_table_id": "rtb-02d20cdc9e7320e52",
            "default_security_group_id": "sg-00f2bd7fd20caee78",
            "dhcp_options_id": "dopt-00347179f2454d87a",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-00772055cda09214f",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-02d20cdc9e7320e52",
            "owner_id": "787987774269",
            "tags": {
              "Name": "education-vpc",
              "kubernetes.io/cluster/education-eks-5h1LPNFN": "shared"
            },
            "tags_all": {
              "Name": "education-vpc",
              "kubernetes.io/cluster/education-eks-5h1LPNFN": "shared"
            }
          },
          "dependencies": [
            "random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    }
  ]
}